[gd_scene load_steps=12 format=3 uid="uid://cb7n6n74mso2p"]

[ext_resource type="Script" path="res://scenes/history/intro_0.gd" id="1_7f6mh"]
[ext_resource type="PackedScene" uid="uid://cbwa2yt5xe6aj" path="res://scenes/window_dialogue_final.tscn" id="2_vg6q6"]
[ext_resource type="Texture2D" uid="uid://vfh3epydlk2w" path="res://assets/places/puente.png" id="3_ornc7"]
[ext_resource type="PackedScene" uid="uid://plq0xuq5ke1w" path="res://scenes/player/player.tscn" id="4_b1sjd"]
[ext_resource type="PackedScene" uid="uid://cacaw2a2ico35" path="res://scenes/npc/havany.tscn" id="4_kdrbg"]
[ext_resource type="AudioStream" uid="uid://uwrsuc6uaht3" path="res://sound/sounds/knock_metal.mp3" id="5_fabnw"]
[ext_resource type="PackedScene" uid="uid://c038ktvy5nic6" path="res://script/decision_manager.tscn" id="6_0fpkn"]
[ext_resource type="AudioStream" uid="uid://dsag4ae3gw0pk" path="res://sound/sounds/wind-sound.mp3" id="7_nyano"]
[ext_resource type="AudioStream" uid="uid://bpooofg0caq2a" path="res://sound/sounds/car-crash.mp3" id="7_wrojo"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_o2pfu"]
a = Vector2(0, -33)
b = Vector2(0, 42)

[sub_resource type="GDScript" id="GDScript_7odus"]
script/source = "extends AudioStreamPlayer


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="intro0" type="Node2D"]
script = ExtResource("1_7f6mh")
TextScene = ExtResource("2_vg6q6")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -533.0
offset_top = -285.0
offset_right = 867.0
offset_bottom = 584.0
color = Color(0, 0, 0, 1)

[node name="Puente" type="Sprite2D" parent="."]
position = Vector2(149, 111)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_ornc7")

[node name="Havany" parent="." instance=ExtResource("4_kdrbg")]
position = Vector2(323, 74)
player = NodePath("../Player")

[node name="Player" parent="." instance=ExtResource("4_b1sjd")]
position = Vector2(321, 105)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-187, 106)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_o2pfu")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-185, 108)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("SegmentShape2D_o2pfu")

[node name="knockMetal" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-186, 101)
stream = ExtResource("5_fabnw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DecisionLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2

[node name="ChoicesContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="DecisionManager" parent="." instance=ExtResource("6_0fpkn")]

[node name="whisper" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_nyano")
parameters/looping = true

[node name="crash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wrojo")
autoplay = true
script = SubResource("GDScript_7odus")

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = -533.0
offset_top = -285.0
offset_right = 867.0
offset_bottom = 584.0
color = Color(0, 0, 0, 1)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="crash" to="." method="_on_crash_finished"]
